# PaddleDailyNews

./: .gitignore  .pre-commit-config.yaml  README.md  app.gradio.py  configure.py  github_help.py  github_helper.py  layout_helper.py  llm_chat.py  main.ipynb  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  statistic_helper.py  test.py  utils.py
.github/workflows/: codestyle-check.yml
Docs/: Requirements.md
llm/: __init__.py  base.py
llm/chatglm3/: ChatGLM3.py  __init__.py  utils.py
llm/ernie/: Ernie.py  __init__.py
